docs/api/qiskit-ibm-runtime/0.23/transpiler.mdx
---
title: passes (v0.23)
description: API reference for qiskit_ibm_runtime.transpiler.passes in qiskit-ibm-runtime v0.23
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.transpiler.passes
---

<span id="transpiler-passes-qiskit-ibm-runtime-transpiler-passes" />

<span id="module-qiskit_ibm_runtime.transpiler.passes" />

# Transpiler passes

`qiskit_ibm_runtime.transpiler.passes`

A collection of transpiler passes for IBM backends. Refer to [transpile](/transpile) to learn more about transpilation and passes.

|                                                                                                                                                         |                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
| [`ConvertIdToDelay`](qiskit_ibm_runtime.transpiler.passes.ConvertIdToDelay "qiskit_ibm_runtime.transpiler.passes.ConvertIdToDelay")(durations\[, gate]) | Convert `qiskit.circuit.library.standard_gates.IGate` to a delay of the corresponding length. |

See [`qiskit_ibm_runtime.transpiler.passes.scheduling`](qiskit_ibm_runtime.transpiler.passes.scheduling#module-qiskit_ibm_runtime.transpiler.passes.scheduling "qiskit_ibm_runtime.transpiler.passes.scheduling") for a collection of scheduling passes.

